# srt-package

./: .gitignore  pyproject.toml
sle_package/: cli.py
src/srt/: __init__.py  __main__.py  cli.py  packages.py  reviews.py
srt/: artifacts.py  cli.py  requests.py  users.py
srt/utils/: logger.py  tools.py
