[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "srt"
dynamic = ["version"]
authors = [
  { name="Gustavo Yokoyama Ribeiro", email="gyr@keemail.me" },
]
description = "A release management tool for SUSE."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["suse", "release", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "argcomplete",
    "python-dotenv",
    "lupa",
    "rich",
    "beautifulsoup4",
    "lxml",
]

[project.urls]
Homepage = "https://github.com/gyr/srt-release-tools"
Documentation = "https://srt-release-tools.readthedocs.io/"
"Bug Tracker" = "https://github.com/gyr/srt-release-tools/issues"

[project.scripts]
srt = "srt.cli:main"

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools to look for packages in the src directory

[tool.setuptools]
# Exclude tests from the package distribution
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "srt.__version__"}
